<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/quizapp"
        app:titleTextColor="@color/white"
        android:background="@color/toolbar"/>

    <TextView
        android:id="@+id/personName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/cactusGreenColor"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_above="@+id/option"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            app:cardBackgroundColor="@color/ghostWhiteColor"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:gravity="top"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="@string/wait"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="20sp"
            android:layout_centerInParent="true"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/a"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_weight="1" />

        </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/optionsRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/optionA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/optionB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/optionC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/optionD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/option"
            android:text="@string/next_question"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@color/tomatoColor"
            android:layout_margin="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nextQuestion"
            android:background="@color/blue"
            android:text="@string/quit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/your_score"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textColor="@color/black"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:text="@string/_0"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
</LinearLayout>