<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AboutActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:titleTextColor="@color/white"
        android:title="@string/quizapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developers"
            android:layout_marginTop="100dp"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/rajkishorbgp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/ghostWhiteColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/rajimage"
                    app:civ_border_width="2dp"
                    android:layout_margin="5dp"

                    app:civ_border_color="#FF000000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/raj_kishor"
                            android:textSize="30sp"
                            android:textColor="@color/black25PercentColor"
                            android:textStyle="bold"
                            android:gravity="bottom"
                            tools:ignore="InefficientWeight" />
                      <TextView
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_weight="2"
                          android:text="@string/rajkishorbgp6_gmail_com"
                          android:textSize="20sp"
                          android:textColor="@color/black"
                          android:layout_gravity="top"
                          />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/linkedin"
                            android:layout_gravity="bottom"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/rajkishorbgp"
                            android:gravity="bottom"
                            android:textColor="@color/black"
                            android:layout_marginBottom="5dp"
                            />
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/github"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="15dp"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/rajkishorbgp"
                            android:gravity="bottom"
                            android:layout_marginBottom="5dp"
                            android:textColor="@color/black"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/ghostWhiteColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/r"
                    app:civ_border_width="2dp"
                    android:layout_margin="5dp"

                    app:civ_border_color="#FF000000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/ram_prasann"
                        android:textSize="30sp"
                        android:textColor="@color/black25PercentColor"
                        android:textStyle="bold"
                        android:gravity="bottom"
                        tools:ignore="InefficientWeight" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/ramprasann123_gmail_com"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_gravity="top"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>